# tally-sdk-rs

./: Cargo.toml  LICENSE  NOTICE  README.md  vouchers.xml
examples/: fetch_all_accounts.rs  fetch_all_currencies.rs  fetch_all_groups.rs  fetch_balance_sheet.rs  fetch_day_book.rs  fetch_profit_and_loss.rs  fetch_trial_balance.rs  fetch_vouchers_apr_jul_2025.rs
examples/common/: mod.rs
src/: config.rs  errors.rs  lib.rs  main.rs
src/client/: company.rs  extract.rs  http.rs  masters.rs  mod.rs  parse.rs  report_parser.rs  reports.rs  voucher_parser.rs  vouchers.rs
src/models/: collection.rs  group.rs  helpers.rs  import.rs  item_invoice.rs  ledger.rs  mod.rs  report.rs  stock_group.rs  stock_item.rs  unit.rs  voucher.rs
src/xml_builder/: envelope.rs  export.rs  group.rs  helpers.rs  item_invoice.rs  ledger.rs  mod.rs  stock_item.rs  voucher.rs
tests/: fetch_vouchers_test.rs  group_hsn_gst_specify_details_test.rs  groups_test.rs  ledger_bank_account_test.rs  purchase_voucher_with_new_item_test.rs  stock_item_create_test.rs
