[package]
name = "tally-sdk-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
quick-xml = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
